--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -53,8 +53,6 @@
 }
 
 @media(max-width: 768px){
-  
-  
   .experience h2{
     font-size: 1.375rem;
   }
@@ -69,6 +67,21 @@
 
   .experience-info{
     width: 690px;
+    margin: 0 auto;
+  }
+}
+
+@media(max-width: 500px){
+  .experience-content{
+    width: 100%;
+  }
+
+  .experience-image{
+    width: 100%;
+  }
+
+  .experience-image img{
+    height: 200px;
   }
 }
 
