--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -66,6 +66,11 @@
     font-size: 1rem;
   }
 }
+@media(max-width: 500px){
+  .skills .skills-items .skills-item{
+    width: 100%;
+  }
+}
 
 @media(max-width: 360px){
   .skills .skills-items .skills-item{
